fixed mobile overflow/scrolling

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   height: 100%;
   font-size: 16px;
+  overflow: hidden;
 }
 
 *,
