--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
 body {
   font-family: "Roboto", sans-serif;
   height: 100%;
+  position: fixed;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* Animations */
@@ -40,6 +44,7 @@ body {
 
 .wrapper {
   height: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -217,7 +222,6 @@ button {
   border-radius: 0.3em;
   font-size: 1em;
   padding: 0.75em;
-  margin: 0.25em;
   transition: 200ms ease-out;
 }
 
